html/css/app.css
/* MADE BY SLIZZARN - DISCORD: slizzarn#1144 GITHUB: https://github.com/slizzarn-fivem */

@font-face {
	font-family: crock;
	src: url(../fonts/crock.ttf) format('truetype')
}

@font-face {
	font-family: HapnaSlabSerif-Medium;
	src: url(../fonts/HapnaSlabSerif-Medium.ttf) format('truetype')
}

.item-image {
	max-height: 50px;
	max-width: 50px;
	margin-right: 5px;
}

.grid-item img {
	height: 90px;
	width: 90px;
}

.menu {
	font-family: "crock", crock, serif;
	min-width: 20vw;
	height: auto;
	color: #fff;
	position: absolute;
	padding: 35px;
	background-image: url(inkroller_1a.png);
	background-repeat: no-repeat;
	background-position: center;
	margin-top: -10px;
	background-size: 100% 100%;
}

.topline {
	position: relative;
	width: 87%;
	height: 4px;
	left: 25px;
	top: -3px;
	background-image: url(divider_line.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: 100% 100%;
}

.scrollbottom {
	width: 88%;
	height: 59px;
	margin-left: 25;
	margin-right: auto;
	margin-top: -15px;
	background-image: url(scroller_right_bottom.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: 100% 100%;
	/* opacity: 0.6; */
}

#item-label {
	margin-top: 4px;
}

.head {
	display: block;
	text-align: center;
	overflow: hidden;
	white-space: nowrap;
	margin-left: 10px;
	margin-right: 10px;
}


.menu .head {
	text-align: center;
	height: 100px;
	color: #fff;
	font-weight: 300;
	font-size: 35px;
	background-image: url(menu_header_1a.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: 100% 100%;
	margin-bottom: 10px;
	margin-top: 20px;
}

.menu .menu-items {
	min-height: 5vh;
	max-height: 39vh;
	overflow-y: auto; /* Changed from hidden to auto to show scrollbar */
	inline-size: 480px;
	overflow-wrap: break-word;
	margin-left: 10px;
	scrollbar-width: auto; /* For Firefox */
	scrollbar-color: #ffffff #000000; /* For Firefox */
}


.menu .menu-items .menu-item {
	width: 87%;
	height: 2vh;
	display: block;
	padding: 15px;
	font-size: 20px;
	text-align: left;
	margin-top: 6px;
	margin-left: auto;
	margin-right: auto;
	background-image: url(selection_box_bg_1d.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: 100% 110%;
	font-family: "crock", HapnaSlabSerif-Medium, serif;
}

.menu-item {
    cursor: pointer;
}
.menu-item:hover {
    background-color: rgb(255, 10, 10);
}

.menu .menu-items .menu-item.selected,
.grid-container .grid-item.selected {
	background-repeat: no-repeat;
	background-position: center;
	background-size: 100% 100%;
}

.menu .menu-items .menu-item.selected {
	background-image: url(selsected.png), url(selection_box_bg_1d.png);
}

.grid-container .grid-item.selected {
	background-image: url(selected-item-box.png), url(selection_box_bg_1d.png);
}

.menu .menu-items .menu-item.slider {
	min-height: 2.5vh;
	font-size: 20px;
}

#slider-label {
	width: 50%;
	float: left;
	text-align: center;
}

i {
	float: left;
	font-size: 18px;
	margin-top: 3%;
}

.desciption {
	text-align: center;
	font-size: 18px;
	font-family: HapnaSlabSerif-Medium;
	inline-size: 420px;
	margin: auto;
	overflow-wrap: break-word;
}

.desciptions {
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}

.options-amount {
	float: right;
	opacity: 0.8;
	font-size: 19px;
	margin-top: -5%;
	margin-right: 7%;
}


.head>span {
	position: relative;
	display: inline-block;
	top: 50%;
	transform: translate(0, -50%)
}

.head>span::before,

.head>span::before {
	right: 105%;
	margin-right: 15px;
}

.head>span::after {
	left: 105%;
	margin-left: 15px;
}


.arrows {
	width: 25%;
	margin-left: 80%;
	margin-top: -28px;
}


#item-label {
	text-align: center
}


.menu.align-left {
	left: 40;
	top: 50%;
	transform: translate(0, -50%);
}

.menu.align-top-left {
	left: 40;
	top: 40;

}

.menu.align-top {
	left: 50%;
	top: 40;
	transform: translate(-50%, 0);
}

.menu.align-top-right {
	right: 10;
	top: 40;
}

.menu.align-right {
	right: 40;
	top: 50%;
	transform: translate(0, -50%);
}

.menu.align-bottom-right {
	right: 40;
	bottom: 40;
}

.menu.align-bottom {
	left: 50%;
	bottom: 40;
	transform: translate(-50%, 0);
}

.menu.align-bottom-left {
	left: 40;
	bottom: 40;
}

.menu.align-center {
	left: 50%;
	top: 40;
	transform: translate(-50%, -50%);
}

/* WebKit scrollbar properties */
::-webkit-scrollbar {
	width: 8px;
	border-left: 4px solid #000000;
}

::-webkit-scrollbar-track {
	background: #000000;
	border-left: 4px solid #000000;
}

::-webkit-scrollbar-thumb {
	background: #ffffff;
	border-left: 4px solid #000000;
}

::-webkit-scrollbar-thumb:hover {
	background: #ffffff;
	border-left: 4px solid #000000;
}

.grid-container {
	display: grid;
	grid-template-columns: repeat(4, 80px);
	grid-gap: 0px 28px;
}

.grid-item {
	width: 80px;
	height: 80px;
	padding: 12px;
	margin-top: 5px;
	margin-left: 31px;
	background-image: url(selection_box_bg_1d.png);
	background-repeat: no-repeat;
	background-size: 100% 100%;
	font-family: "crock", HapnaSlabSerif-Medium, serif;
}


@media screen and (min-width: 1920px) and (max-height: 1080px) {
	.menu {
		padding: 40px;
		margin-top: -2%;
	}

	.menu .menu-items .menu-item {
		font-size: 16px;
		padding: 13px;
	}

	#item-label {
		margin-top: -2px;
	}

	.menu .menu-items {
		min-height: 5vh;
		max-height: 41.5vh;
		inline-size: 403px;
	}

	#slider-label {
		width: 50%;
		font-size: 16px;
	}

	.menu .menu-items .menu-item.slider {
		min-height: 2.5vh;
		font-size: 16px;
	}

	.grid-item {
		width: 75px;
		height: 75px;
		padding: 12px;
		margin-top: 5px;
		margin-left: 1px;
	}

	.grid-container {
		grid-template-columns: repeat(4, 75px);
		grid-gap: 0px 25px;
	}

}

@media (min-width:3840px) {

	.menu {
		width: 670px;
	}

	.menu .menu-items .menu-item {
		font-size: 25px;
	}

	.menu .menu-items {
		inline-size: 580px;
		overflow-wrap: break-word;
		margin-left: 30px;
	}


}


/* MADE BY SLIZZARN - DISCORD: slizzarn#1144 GITHUB: https://github.com/slizzarn-fivem */

